feat: удалил поле "role" из запроса регистрации и обновил соответствующую документацию
