# docs/swagger.json
@@ -133,8 +133,7 @@
             "type": "object",
             "required": [
                 "login",
-                "password",
-                "role"
+                "password"
             ],
             "properties": {
                 "login": {
@@ -144,18 +143,6 @@
                 "password": {
                     "type": "string",
                     "example": "secret"
-                },
-                "role": {
-                    "enum": [
-                        "admin",
-                        "user"
-                    ],
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.UserRole"
-                        }
-                    ],
-                    "example": "user"
                 }
             }
         },
